Fix social links gap

--- a/src/scss/components/_breakpoints.scss
+++ b/src/scss/components/_breakpoints.scss
@@ -166,5 +166,9 @@
             "faq pri ins"
             "con pres ...";
         }
+        
+        &__social-list {
+            column-gap: 24px;
+        }
     }
 }
